# Robots

./: .gitignore
src/train_fetch/: CMakeLists.txt  package.xml  setup.bash
src/train_fetch/launch/: contact.launch  contact_ground.launch
src/train_fetch/launch/include/: fetch.launch.xml
src/train_fetch/logs/: 0214-1358-pytorch.p  0216-2205-pytorch-action.p  0216-2205-pytorch.p  0223-1802-pytorch-action.p  0223-1802-pytorch.p  0223-1932-pytorch-action.p  0223-1932-pytorch.p  0310-1042-pytorch.p  0311-1237-pytorch-reward.p  0311-1237-pytorch.p  0312-1925-pytorch-action.p  0312-1925-pytorch-reward.p  0312-1925-pytorch.p  0315-1140-pytorch-action.p  0315-1140-pytorch-reward.p  0315-1140-pytorch.p  Actions.ipynb  FirstDecay.ipynb  Untitled.ipynb  action_histograms.ipynb  arm_positions  df_operations.py  get_arm_positions.py  histograms.py  out  parse_logs.py
src/train_fetch/misc/: joint_states_goal  joint_states_initial  link_state_initial  read_joint_states.py  read_link_states.py  test
src/train_fetch/saved_models/: critic5
src/train_fetch/scripts/: .start_arm_straight.py.swp  PPO.py  arm.py  arm_demo.py  arm_test.py  arm_timeout.py  arm_train.py  delete_model_test.py  file_check.py  get_arm_positions.py  ground_contact.py  models.py  move_test.py  namespace_test.py  params.yaml  prepare_simulated_robot.py  pytorch_train.py  read_box_location_test.py  read_link_states.py  read_yaml.py  reset_test.py  send_msgs.py  spawn_models.py  spawn_test.py  start_arm_straight.py  test.py  time_test.py  train.py  utils.py
src/train_fetch/worlds/: contact.world  working
(+132 files in other folders)
